blackout and text

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,12 +1,16 @@
 /* font-family: 'Martel Sans', sans-serif; */
 
+* {
+  background: black;
+}
+
 .navLink {
   text-decoration: none;
   color: white;
   display: inline-block;
   margin-left: 16px;
   font-size: 13px;
-  font-family: 'Martel Sans', sans-serif;
+  font-family: "Martel Sans", sans-serif;
 }
 
 .first {
@@ -20,7 +24,7 @@
   margin: auto;
   font-size: 22px;
   text-decoration: none;
-  font-family: 'Martel Sans', sans-serif;
+  font-family: "Martel Sans", sans-serif;
 }
 
 .hoverItem {
@@ -29,4 +33,9 @@
 
 .hoverItem:hover {
   cursor: pointer;
+}
+
+.contentBody {
+  width: 90%;
+  margin: 0 auto;
 }
