--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,8 @@
 /* font-family: 'Martel Sans', sans-serif; */
+@import url('https://fonts.googleapis.com/css?family=Roboto:700,900');
 
 * {
-  background: black;
+  background: #141414;
 }
 
 .navLink {
@@ -22,9 +23,12 @@
   display: inline-block;
   color: rgba(229, 9, 20, 1);
   margin: auto;
-  font-size: 22px;
   text-decoration: none;
-  font-family: "Martel Sans", sans-serif;
+  font-family: 'Roboto';
+  font-size: 5vmin;
+  font-weight: 700;
+  border-bottom-left-radius:-50%;
+  border-bottom-right-radius:-50%;
 }
 
 .hoverItem {
